uploading an image (avoiding reload and using ajax)

--- a/source/static/style.css
+++ b/source/static/style.css
@@ -20,3 +20,18 @@
 .tab{
     margin-left: 10%;
 }
+
+.page {
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-top: 25px;
+    padding-bottom: 30px;
+}
+
+#source_img, #target_img{
+    min-height: 70px;
+}
+
+img{
+    width:100%;
+}
