--- a/source/templates/index.html
+++ b/source/templates/index.html
@@ -50,8 +50,7 @@
                     <td></td>
                     <td>
                         <!--Fill with display options template-->
-                        <div id="display_wrapper" class="tab top"></div>
-                        <input id="apply_btn" type="button" class="btn btn-primary" value="Apply">
+                        <div id="display_wrapper"></div>
                     </td>
                 </tr>
 
